--- a/girlsWhoCodeTypography/css/style.css
+++ b/girlsWhoCodeTypography/css/style.css
@@ -1,28 +1,62 @@
-@import url(http://fonts.googleapis.com/css?family=Mr+Dafoe);
 
-body { background: #000; color: #fff; position: relative;}
+  @import url(http://fonts.googleapis.com/css?family=Mr+Dafoe);
+  @import url('https://fonts.googleapis.com/css?family=Berkshire+Swash');
+body { background: #ff8b8b; color: #fff; position: relative;}
 
 .future-cop {
   position: relative;
-  margin-top: 500px;
+  
+}
+.future {
+    position: absolute;
+    left: 0;
+    top: 0px;
+    font-family: 'Berkshire Swash';
+    font-size: 200px;
+    margin-top: 0px;
+    margin-bottom: 0;
+    color: #ff0199;
+    -webkit-text-fill-color: rgb(255, 255, 255);
+    text-shadow: -2px -2px 0 #fffeff;
+    -webkit-filter: drop-shadow(3px 3px 1px #441F62);
+    -webkit-transform: skew(-5deg,-1deg);
+    font-weight: normal;
+    z-index: 2;
+    margin-left: 60px;
+    padding-left: 50px;
+    padding-right: 70px;
+}
+span.girls {
+    position: inherit;
+    top: 27px;
+    left: 40px;
+}
+span.who {
+    left: 402px;
+    position: inherit;
+    top: 195px;
+}
+span.code {
+    position: inherit;
+    left: 162px;
+    top: 410px;
 }
 
-.future {
-  position: absolute;
-  left: 0;
-  top: 0px;
-  font-family: 'Mr Dafoe', cursive;
-  font-size: 200px;
-  margin-top: 160px;
-  margin-bottom: 0;
-  color: #EB219B;
-  -webkit-text-fill-color: rgba(253, 90, 250, 1);
-  text-shadow: -2px -2px 0 #FFBAF2;
-  -webkit-filter: drop-shadow(3px 3px 1px #441F62);
-  -webkit-transform: skew(-5deg,-5deg);
-  font-weight: normal;
-  z-index: 2;
-  margin-left: 60px;
-  padding-left: 50px;
-  padding-right: 70px;
+@keyframes charAppear {
+  0% {
+    visibility: hidden;
+    opacity: .25;
+  }
+  50% {
+    visibility: visible;
+    opacity: 1;
+  }
+  100% {
+    visibility: hidden;
+    opacity: .25;
+  }
+}
+
+.char {
+  animation: charAppear 10s infinite;
 }
