simple box animation within friday-midnight

--- a/yoloSoloTypo/css/style.css
+++ b/yoloSoloTypo/css/style.css
@@ -12,20 +12,27 @@
     margin-top: 175px;
 }
 html {
-  animation: bgChange 4s infinite;
+  animation: bgChange 14s infinite;
+    -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+      background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 @keyframes bgChange{
   0%{
-     background: #ff8080;
+   background-image: -webkit-radial-gradient(center, ellipse cover, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
   }
   33%{
-background: #af5050;
+background-image: -webkit-radial-gradient(center, ellipse cover, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
   }
   66%{
-   background: #613d3d;
+background-image: -webkit-radial-gradient(center, ellipse cover, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
   }
     100%{
-     background: #ff8080;
+background-image: -webkit-radial-gradient(center, ellipse cover, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
   }
 }
