--- a/friday-midnight/css/style.css
+++ b/friday-midnight/css/style.css
@@ -22,7 +22,7 @@ html {
     margin-right: auto;
     padding-top: 300px;
     margin-top: 200px;
-    background: yellow;
+    background: black;
 }
 @-webkit-keyframes friday-midnight { 
   0%   { 
